syntax = "proto3";

package alloy;

option go_package = "github.com/tcm5343/circular-dependency-detector/protos;protos";

service AlloyAnalyzer {
    rpc analyzeModel (ModelRequest) returns (ModelResponse) {}
}

message ModelRequest {
    string file_path = 1;
}

message ModelResponse {
    string result = 1;
}
